{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 36,
  "lineage": "7fee3d09-8805-d8c2-c012-cd671f366545",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0c2d31ae06774f1",
            "domain": "vpc",
            "id": "eipalloc-0e0c2d31ae06774f1",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-35-154-211-149.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.211.149",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-ElasticIP-NAT- 1",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-ElasticIP-NAT- 1",
              "Team": "DevOps"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8ce1738463898e2",
            "domain": "vpc",
            "id": "eipalloc-0a8ce1738463898e2",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-204-153-8.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.153.8",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-ElasticIP-NAT- 2",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-ElasticIP-NAT- 2",
              "Team": "DevOps"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:internet-gateway/igw-06aa8f2e2726a1d77",
            "id": "igw-06aa8f2e2726a1d77",
            "owner_id": "290086378619",
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-IGW",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-IGW",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0c2d31ae06774f1",
            "association_id": "eipassoc-072b522fef34bf8ce",
            "connectivity_type": "public",
            "id": "nat-0b9edfbdf996873a4",
            "network_interface_id": "eni-071601abf3be73e2e",
            "private_ip": "10.0.1.114",
            "public_ip": "35.154.211.149",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04388413c34857b16",
            "tags": {
              "Envirnment": "Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-Nat-1",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": "Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-Nat-1",
              "Team": "DevOps"
            }
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8ce1738463898e2",
            "association_id": "eipassoc-05f61d33372055891",
            "connectivity_type": "public",
            "id": "nat-025c8764251da77d8",
            "network_interface_id": "eni-04b51a4cf552f77ea",
            "private_ip": "10.0.30.130",
            "public_ip": "43.204.153.8",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01504603ff9586289",
            "tags": {
              "Envirnment": "Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-Nat-2",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": "Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-Nat-2",
              "Team": "DevOps"
            }
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:route-table/rtb-0a36f804645a94656",
            "id": "rtb-0a36f804645a94656",
            "owner_id": "290086378619",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b9edfbdf996873a4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateRoute-1",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateRoute-1",
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_nat_gateway.natgateways",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:route-table/rtb-05c6eced51c86800d",
            "id": "rtb-05c6eced51c86800d",
            "owner_id": "290086378619",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-025c8764251da77d8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateRoute-2",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateRoute-2",
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_nat_gateway.natgateways",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:route-table/rtb-0657e467db5d0f606",
            "id": "rtb-0657e467db5d0f606",
            "owner_id": "290086378619",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b9edfbdf996873a4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateRoute-3",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateRoute-3",
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_nat_gateway.natgateways",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:route-table/rtb-00bab166860eccb6c",
            "id": "rtb-00bab166860eccb6c",
            "owner_id": "290086378619",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-025c8764251da77d8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateRoute-4",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateRoute-4",
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_nat_gateway.natgateways",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:route-table/rtb-0d6c5d82faf4f504f",
            "id": "rtb-0d6c5d82faf4f504f",
            "owner_id": "290086378619",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b9edfbdf996873a4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateRoute-5",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateRoute-5",
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_nat_gateway.natgateways",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:route-table/rtb-097f1a2980dafb083",
            "id": "rtb-097f1a2980dafb083",
            "owner_id": "290086378619",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-025c8764251da77d8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateRoute-6",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateRoute-6",
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_nat_gateway.natgateways",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:route-table/rtb-0f47b8c5b2881a3bf",
            "id": "rtb-0f47b8c5b2881a3bf",
            "owner_id": "290086378619",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b9edfbdf996873a4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateRoute-7",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateRoute-7",
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_nat_gateway.natgateways",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:route-table/rtb-08549df2b15a012c1",
            "id": "rtb-08549df2b15a012c1",
            "owner_id": "290086378619",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-025c8764251da77d8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateRoute-8",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateRoute-8",
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_nat_gateway.natgateways",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:route-table/rtb-0c5abc91935ed30bf",
            "id": "rtb-0c5abc91935ed30bf",
            "owner_id": "290086378619",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06aa8f2e2726a1d77",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PublicRT",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PublicRT",
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privatertassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3b1be6e30e4d3ef",
            "route_table_id": "rtb-0a36f804645a94656",
            "subnet_id": "subnet-08d922969af9f0c34"
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_nat_gateway.natgateways",
            "aws_route_table.privateroute",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04627de92a45a041c",
            "route_table_id": "rtb-05c6eced51c86800d",
            "subnet_id": "subnet-0b3823f78552d861a"
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_nat_gateway.natgateways",
            "aws_route_table.privateroute",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0203fcc83035e6880",
            "route_table_id": "rtb-0657e467db5d0f606",
            "subnet_id": "subnet-02fbe551e691f32ba"
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_nat_gateway.natgateways",
            "aws_route_table.privateroute",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a5fc91d77d8497a",
            "route_table_id": "rtb-00bab166860eccb6c",
            "subnet_id": "subnet-0a292ee1c3a49d417"
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_nat_gateway.natgateways",
            "aws_route_table.privateroute",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b77188eab6d0d82",
            "route_table_id": "rtb-0d6c5d82faf4f504f",
            "subnet_id": "subnet-057de933c74ffe5de"
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_nat_gateway.natgateways",
            "aws_route_table.privateroute",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e4c332820960050",
            "route_table_id": "rtb-097f1a2980dafb083",
            "subnet_id": "subnet-00a1488078f418753"
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_nat_gateway.natgateways",
            "aws_route_table.privateroute",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce02844ad7856cd9",
            "route_table_id": "rtb-0f47b8c5b2881a3bf",
            "subnet_id": "subnet-06dc835bd5e71750d"
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_nat_gateway.natgateways",
            "aws_route_table.privateroute",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b45af75cc46e403",
            "route_table_id": "rtb-08549df2b15a012c1",
            "subnet_id": "subnet-0623bd07d4b5d8d0a"
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.main",
            "aws_nat_gateway.natgateways",
            "aws_route_table.privateroute",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicrtassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b4ad83aeac2b624",
            "route_table_id": "rtb-0c5abc91935ed30bf",
            "subnet_id": "subnet-04388413c34857b16"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.publicrt",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e793a9c508253c61",
            "route_table_id": "rtb-0c5abc91935ed30bf",
            "subnet_id": "subnet-01504603ff9586289"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.publicrt",
            "aws_subnet.public_subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:subnet/subnet-08d922969af9f0c34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d922969af9f0c34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "290086378619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateSubnet - 1",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateSubnet - 1",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:subnet/subnet-0b3823f78552d861a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3823f78552d861a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "290086378619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateSubnet - 2",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateSubnet - 2",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:subnet/subnet-02fbe551e691f32ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fbe551e691f32ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "290086378619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateSubnet - 3",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateSubnet - 3",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:subnet/subnet-0a292ee1c3a49d417",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a292ee1c3a49d417",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "290086378619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateSubnet - 4",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateSubnet - 4",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:subnet/subnet-057de933c74ffe5de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057de933c74ffe5de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "290086378619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateSubnet - 5",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateSubnet - 5",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:subnet/subnet-00a1488078f418753",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.160.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a1488078f418753",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "290086378619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateSubnet - 6",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateSubnet - 6",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:subnet/subnet-06dc835bd5e71750d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.192.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dc835bd5e71750d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "290086378619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateSubnet - 7",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateSubnet - 7",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:subnet/subnet-0623bd07d4b5d8d0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.208.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0623bd07d4b5d8d0a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "290086378619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateSubnet - 8",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PrivateSubnet - 8",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:subnet/subnet-04388413c34857b16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04388413c34857b16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "290086378619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PublicSubnet - 1",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PublicSubnet - 1",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:subnet/subnet-01504603ff9586289",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01504603ff9586289",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "290086378619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PublicSubnet - 2",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC-PublicSubnet - 2",
              "Team": "DevOps"
            },
            "vpc_id": "vpc-0cecf76151452db5d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:290086378619:vpc/vpc-0cecf76151452db5d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-010b65a1b0f4349b7",
            "default_route_table_id": "rtb-00f328fa8ea3fffc7",
            "default_security_group_id": "sg-009d070db441ce9e2",
            "dhcp_options_id": "dopt-06b5dc1f2f8fc7513",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cecf76151452db5d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00f328fa8ea3fffc7",
            "owner_id": "290086378619",
            "tags": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC",
              "Team": "DevOps"
            },
            "tags_all": {
              "Envirnment": " Dev",
              "MaintedBy": "Terraform",
              "Name": "NerveHub-VPC",
              "Team": "DevOps"
            }
          }
        }
      ]
    }
  ]
}